# vs-static-inline-crash

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  testlib.cpp  testlib.hpp
